--- a/dlls/mmdevapi/Makefile.in
+++ b/dlls/mmdevapi/Makefile.in
@@ -7,6 +7,7 @@ C_SRCS = \
 	audiovolume.c \
 	devenum.c \
 	main.c \
-	spatialaudio.c
+	spatialaudio.c \
+	nulldrv.c
 
 IDL_SRCS = mmdevapi_classes.idl
