WIP: prof: ntdll: Add profiling utility functions.
And use them to profile client request time.

--- a/dlls/ntdll/Makefile.in
+++ b/dlls/ntdll/Makefile.in
@@ -52,6 +52,7 @@ C_SRCS = \
 	unix/fsync.c \
 	unix/loader.c \
 	unix/process.c \
+	unix/prof.c \
 	unix/registry.c \
 	unix/security.c \
 	unix/serial.c \
