--- a/dlls/user32/tests/Makefile.in
+++ b/dlls/user32/tests/Makefile.in
@@ -1,5 +1,5 @@
 TESTDLL   = user32.dll
-IMPORTS   = user32 gdi32 advapi32 hid dwmapi
+IMPORTS   = user32 gdi32 advapi32 hid dwmapi d3d9
 
 C_SRCS = \
 	broadcast.c \
