--- a/dlls/xactengine3_5/Makefile.in
+++ b/dlls/xactengine3_5/Makefile.in
@@ -1,7 +1,7 @@
 MODULE    = xactengine3_5.dll
 IMPORTS   = ole32 uuid
 EXTRADEFS = -DXACT3_VER=0x0305
-PARENTSRC = ../xactengine3_7
+PARENTSRC = ../xaudio2_7
 EXTRALIBS = $(FAUDIO_LIBS)
 EXTRAINCL = $(FAUDIO_CFLAGS)
 
