--- a/dlls/xaudio2_1/Makefile.in
+++ b/dlls/xaudio2_1/Makefile.in
@@ -2,13 +2,14 @@ EXTRADEFS = -DXAUDIO2_VER=1
 MODULE    = xaudio2_1.dll
 IMPORTS   = advapi32 ole32 user32 uuid
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(FAUDIO_LIBS)
+EXTRALIBS = $(DL_LIBS)
 EXTRAINCL = $(FAUDIO_CFLAGS)
 
 EXTRADLLFLAGS = $(XAUDIO_NATIVE_SWITCH)
 
 C_SRCS = \
 	compat.c \
+	faudio.c \
 	xapo.c \
 	xaudio_allocator.c \
 	xaudio_dll.c
