--- a/dlls/xaudio2_9/Makefile.in
+++ b/dlls/xaudio2_9/Makefile.in
@@ -2,13 +2,14 @@ EXTRADEFS = -DXAUDIO2_VER=9
 MODULE    = xaudio2_9.dll
 IMPORTS   = advapi32 ole32 user32 uuid
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(FAUDIO_LIBS)
+EXTRALIBS = $(DL_LIBS)
 EXTRAINCL = $(FAUDIO_CFLAGS)
 
 EXTRADLLFLAGS = $(XAUDIO_NATIVE_SWITCH)
 
 C_SRCS = \
 	compat.c \
+	faudio.c \
 	x3daudio.c \
 	xapo.c \
 	xapofx.c \
