--- a/dlls/xactengine3_7/Makefile.in
+++ b/dlls/xactengine3_7/Makefile.in
@@ -2,10 +2,7 @@ MODULE    = xactengine3_7.dll
 IMPORTS   = ole32 uuid
 EXTRADEFS = -DXACT3_VER=0x0307
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(DL_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
-
-EXTRADLLFLAGS = $(XAUDIO_NATIVE_SWITCH)
+EXTRADLLFLAGS = -mno-cygwin $(XAUDIO_NATIVE_SWITCH)
 
 C_SRCS = \
 	faudio.c \
