--- a/dlls/xaudio2_6/Makefile.in
+++ b/dlls/xaudio2_6/Makefile.in
@@ -2,10 +2,9 @@ EXTRADEFS = -DXAUDIO2_VER=6
 MODULE    = xaudio2_6.dll
 IMPORTS   = advapi32 ole32 user32 uuid
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(DL_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
+EXTRAINCL = -I../xaudio2_7/FAudio
 
-EXTRADLLFLAGS = $(XAUDIO_NATIVE_SWITCH)
+EXTRADLLFLAGS = -mno-cygwin $(XAUDIO_NATIVE_SWITCH)
 
 C_SRCS = \
 	compat.c \
