--- a/dlls/xaudio2_7/Makefile.in
+++ b/dlls/xaudio2_7/Makefile.in
@@ -1,10 +1,8 @@
 EXTRADEFS = -DXAUDIO2_VER=7
 MODULE    = xaudio2_7.dll
 IMPORTS   = advapi32 ole32 user32 uuid
-EXTRALIBS = $(DL_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
 
-EXTRADLLFLAGS = $(XAUDIO_NATIVE_SWITCH)
+EXTRADLLFLAGS = -mno-cygwin $(XAUDIO_NATIVE_SWITCH)
 
 C_SRCS = \
 	compat.c \
