--- a/dlls/xaudio2_8/Makefile.in
+++ b/dlls/xaudio2_8/Makefile.in
@@ -2,10 +2,7 @@ EXTRADEFS = -DXAUDIO2_VER=8
 MODULE    = xaudio2_8.dll
 IMPORTS   = advapi32 ole32 user32 uuid
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(DL_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
-
-EXTRADLLFLAGS = $(XAUDIO_NATIVE_SWITCH)
+EXTRADLLFLAGS = -mno-cygwin $(XAUDIO_NATIVE_SWITCH)
 
 C_SRCS = \
 	compat.c \
