xusb22.sys: Request lower device HID caps and report desc.

--- a/dlls/xusb22.sys/Makefile.in
+++ b/dlls/xusb22.sys/Makefile.in
@@ -1,5 +1,5 @@
 MODULE = xusb22.sys
-IMPORTS = ntoskrnl
+IMPORTS = ntoskrnl hidparse
 EXTRADLLFLAGS = -mno-cygwin -Wl,--subsystem,native
 
 C_SRCS = \
