xusb22.sys: Translate lower reports into XInput HID reports.

--- a/dlls/xusb22.sys/Makefile.in
+++ b/dlls/xusb22.sys/Makefile.in
@@ -1,6 +1,7 @@
 MODULE = xusb22.sys
 IMPORTS = ntoskrnl hidparse
 EXTRADLLFLAGS = -mno-cygwin -Wl,--subsystem,native
+PARENTSRC = ../winebus.sys
 
 C_SRCS = \
 	main.c
