xusb22.sys: Introduce new xusb22.sys driver.
Currently only acting as a pass-through driver, matching XBox gamepad
devices on any bus, or "XUSB22" compatible devices.

This creates new PDO on the XINPUT bus, adding the &IG_ device ID
suffix to the original device ID (replacing an eventual &MI_ suffix),
and removes the need to set the suffix on winebus.sys side.

--- a/configure.ac
+++ b/configure.ac
@@ -3906,6 +3906,7 @@ WINE_CONFIG_MAKEFILE(dlls/xmllite/tests)
 WINE_CONFIG_MAKEFILE(dlls/xolehlp)
 WINE_CONFIG_MAKEFILE(dlls/xpsprint)
 WINE_CONFIG_MAKEFILE(dlls/xpssvcs)
+WINE_CONFIG_MAKEFILE(dlls/xusb22.sys)
 WINE_CONFIG_MAKEFILE(fonts)
 WINE_CONFIG_MAKEFILE(include)
 WINE_CONFIG_MAKEFILE(libs/port)
