--- a/Makefile.in
+++ b/Makefile.in
@@ -59,6 +59,7 @@ AR              = @AR@
 RANLIB          = @RANLIB@
 STRIP           = @STRIP@
 LN_S            = @LN_S@
+EXTSRCDIR       = @EXTSRCDIR@
 TOOLSDIR        = @TOOLSDIR@
 LD              = @LD@
 LDFLAGS         = @LDFLAGS@
