--- a/dlls/xapofx1_4/Makefile.in
+++ b/dlls/xapofx1_4/Makefile.in
@@ -1,9 +1,9 @@
 EXTRADEFS = -DXAPOFX1_VER=4 -DXAUDIO2_VER=6
 MODULE    = xapofx1_4.dll
-IMPORTS   = ole32
+IMPORTS   = winefaudio mfplat mfreadwrite mfuuid uuid propsys ole32
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(FAUDIO_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
+EXTRAINCL = -I$(EXTSRCDIR)/FAudio/include
+EXTRADLLFLAGS = -mno-cygwin
 
 C_SRCS = \
 	xapo.c \
