--- a/dlls/x3daudio1_4/Makefile.in
+++ b/dlls/x3daudio1_4/Makefile.in
@@ -1,8 +1,9 @@
 EXTRADEFS = -DX3DAUDIO1_VER=4 -DXAUDIO2_VER=4
 MODULE    = x3daudio1_4.dll
+IMPORTS   = winefaudio mfplat mfreadwrite mfuuid uuid propsys ole32
 PARENTSRC = ../xaudio2_7
-EXTRALIBS = $(FAUDIO_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
+EXTRAINCL = -I$(EXTSRCDIR)/FAudio/include
+EXTRADLLFLAGS = -mno-cygwin
 
 C_SRCS = \
 	x3daudio.c
