--- a/dlls/l3codeca.acm/Makefile.in
+++ b/dlls/l3codeca.acm/Makefile.in
@@ -1,7 +1,8 @@
 MODULE    = l3codeca.acm
-IMPORTS   = winmm user32
-EXTRAINCL = $(MPG123_CFLAGS)
-EXTRALIBS = $(MPG123_LIBS)
+IMPORTS   = winempg123 winmm user32 kernelbase
+EXTRAINCL = -I$(EXTSRCDIR)/mpg123/src/libmpg123
+
+EXTRADLLFLAGS = -mno-cygwin
 
 C_SRCS = \
 	mpegl3.c
