configure.ac: Use WARNCFLAGS variable for warnings.

--- a/Makefile.in
+++ b/Makefile.in
@@ -42,7 +42,9 @@ CPPFLAGS        = @CPPFLAGS@
 CROSSCFLAGS     = @CROSSCFLAGS@
 CROSSLDFLAGS    = @CROSSLDFLAGS@
 EXTRACFLAGS     = @EXTRACFLAGS@
+WARNCFLAGS      = @WARNCFLAGS@
 EXTRACROSSCFLAGS= @EXTRACROSSCFLAGS@
+WARNCROSSCFLAGS = @WARNCROSSCFLAGS@
 MSVCRTFLAGS     = @MSVCRTFLAGS@
 TARGETFLAGS     = @TARGETFLAGS@
 LDDLLFLAGS      = @LDDLLFLAGS@
