--- a/dlls/dbghelp/Makefile.in
+++ b/dlls/dbghelp/Makefile.in
@@ -1,5 +1,7 @@
 MODULE    = dbghelp.dll
 IMPORTLIB = dbghelp
+IMPORTS   = winezlib
+EXTRAINCL = -I$(EXTSRCDIR)/zlib
 EXTRADEFS = -D_IMAGEHLP_SOURCE_
 DELAYIMPORTS = version
 
@@ -15,7 +17,6 @@ C_SRCS = \
 	dwarf.c \
 	elf_module.c \
 	image.c \
-	inflate.c \
 	macho_module.c \
 	minidump.c \
 	module.c \
