wininet: Build with winezlib.

--- a/dlls/wininet/Makefile.in
+++ b/dlls/wininet/Makefile.in
@@ -1,6 +1,7 @@
 MODULE    = wininet.dll
 IMPORTLIB = wininet
-IMPORTS   = mpr shlwapi shell32 user32 ws2_32 advapi32
+IMPORTS   = winezlib mpr shlwapi shell32 user32 ws2_32 advapi32
+EXTRAINCL = -I$(EXTSRCDIR)/zlib
 DELAYIMPORTS = secur32 crypt32 cryptui dhcpcsvc iphlpapi
 
 EXTRADLLFLAGS = -mno-cygwin
@@ -11,7 +12,6 @@ C_SRCS = \
 	ftp.c \
 	gopher.c \
 	http.c \
-	inflate.c \
 	internet.c \
 	netconnection.c \
 	urlcache.c \
