--- a/dlls/opcservices/Makefile.in
+++ b/dlls/opcservices/Makefile.in
@@ -1,11 +1,11 @@
 MODULE  = opcservices.dll
-IMPORTS = uuid ole32 advapi32 urlmon xmllite oleaut32
+IMPORTS = winezlib uuid ole32 advapi32 urlmon xmllite oleaut32
+EXTRAINCL = -I$(EXTSRCDIR)/zlib
 
 EXTRADLLFLAGS = -mno-cygwin
 
 C_SRCS = \
 	compress.c \
-	deflate.c \
 	factory.c \
 	package.c \
 	uri.c
