--- a/dlls/gdi32/Makefile.in
+++ b/dlls/gdi32/Makefile.in
@@ -1,9 +1,10 @@
 EXTRADEFS = -D_GDI32_
 MODULE    = gdi32.dll
 IMPORTLIB = gdi32
-IMPORTS   = advapi32 winezlib
-EXTRAINCL = -I$(EXTSRCDIR)/zlib $(FREETYPE_CFLAGS) $(FONTCONFIG_CFLAGS)
+IMPORTS   = advapi32 winefreetype winepng winezlib
+EXTRAINCL = -I$(EXTSRCDIR)/freetype2/include -I$(EXTSRCDIR)/zlib $(FONTCONFIG_CFLAGS)
 EXTRALIBS = $(CARBON_LIBS) $(APPKIT_LIBS)
+EXTRADEFS = -DHAVE_FT2BUILD_H
 DELAYIMPORTS = setupapi
 
 EXTRADLLFLAGS = -mno-cygwin
@@ -30,6 +31,7 @@ C_SRCS = \
 	enhmfdrv/init.c \
 	enhmfdrv/objects.c \
 	font.c \
+	fontlist.c \
 	freetype.c \
 	gdidc.c \
 	gdiobj.c \
