--- a/dlls/xactengine3_3/Makefile.in
+++ b/dlls/xactengine3_3/Makefile.in
@@ -1,9 +1,9 @@
 MODULE    = xactengine3_3.dll
-IMPORTS   = ole32 uuid
+IMPORTS   = winefaudio mfplat mfreadwrite mfuuid uuid propsys ole32
 EXTRADEFS = -DXACT3_VER=0x0303
 PARENTSRC = ../xactengine3_7
-EXTRALIBS = $(FAUDIO_LIBS)
-EXTRAINCL = $(FAUDIO_CFLAGS)
+EXTRAINCL = -I$(EXTSRCDIR)/FAudio/include
+EXTRADLLFLAGS = -mno-cygwin
 
 C_SRCS = \
 	xact_dll.c
