--- a/dlls/dwrite/Makefile.in
+++ b/dlls/dwrite/Makefile.in
@@ -1,7 +1,7 @@
 MODULE    = dwrite.dll
 IMPORTLIB = dwrite
-IMPORTS   = user32 gdi32 advapi32
-EXTRAINCL = $(FREETYPE_CFLAGS)
+IMPORTS   = user32 gdi32 advapi32 winefreetype
+EXTRAINCL = -I$(EXTSRCDIR)/freetype2/include
 
 EXTRADLLFLAGS = -mno-cygwin
 
