--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ AC_CONFIG_HEADERS(include/config.h)
 AC_CONFIG_AUX_DIR(tools)
 
 libwine_version="1.0"
-wineext_version=0
+wineext_version=1
 
 dnl autoconf versions before 2.63b don't have AS_VAR_APPEND or AS_VAR_IF
 m4_ifdef([AS_VAR_APPEND],,[as_fn_append () { eval $[1]=\$$[1]\$[2]; }
@@ -269,7 +269,9 @@ if test "${extdir_version:-0}" -ne $wineext_version; then
  AC_MSG_ERROR([incompatible version $extdir_version of Wine external dependencies, version $wineext_version required.])
  wine_cv_extdir=""
 fi
-if test -n "$wine_cv_extdir"; then
+if test -z "$wine_cv_extdir"; then
+  enable_winefaudio=${enable_winefaudio:-no}
+else
   AC_SUBST(EXTSRCDIR,$wine_cv_extdir)
 fi
 
@@ -3931,6 +3933,7 @@ WINE_CONFIG_MAKEFILE(dlls/xmllite/tests)
 WINE_CONFIG_MAKEFILE(dlls/xolehlp)
 WINE_CONFIG_MAKEFILE(dlls/xpsprint)
 WINE_CONFIG_MAKEFILE(dlls/xpssvcs)
+WINE_CONFIG_MAKEFILE(external/winefaudio)
 WINE_CONFIG_MAKEFILE(fonts)
 WINE_CONFIG_MAKEFILE(include)
 WINE_CONFIG_MAKEFILE(libs/port)
