--- a/dlls/user32/Makefile.in
+++ b/dlls/user32/Makefile.in
@@ -1,8 +1,8 @@
 EXTRADEFS = -D_USER32_ -D_WINABLE_
 MODULE    = user32.dll
 IMPORTLIB = user32
-IMPORTS   = setupapi gdi32 version sechost advapi32 kernelbase
-EXTRAINCL = $(PNG_CFLAGS)
+IMPORTS   = winepng winezlib setupapi gdi32 version sechost advapi32 kernelbase
+EXTRAINCL = -I$(EXTSRCDIR)/libpng -I$(EXTSRCDIR)/zlib
 DELAYIMPORTS = hid imm32
 
 EXTRADLLFLAGS = -mno-cygwin
