--- a/configure.ac
+++ b/configure.ac
@@ -12,7 +12,7 @@ AC_CONFIG_HEADERS(include/config.h)
 AC_CONFIG_AUX_DIR(tools)
 
 libwine_version="1.0"
-wineext_version=6
+wineext_version=7
 
 dnl autoconf versions before 2.63b don't have AS_VAR_APPEND or AS_VAR_IF
 m4_ifdef([AS_VAR_APPEND],,[as_fn_append () { eval $[1]=\$$[1]\$[2]; }
@@ -266,6 +266,7 @@ if test "${extdir_version:-0}" -ne $wineext_version; then
  wine_cv_extdir=""
 fi
 if test -z "$wine_cv_extdir"; then
+  enable_winebrotli=${enable_winebrotli:-no}
   enable_winefaudio=${enable_winefaudio:-no}
   enable_winefreetype=${enable_winefreetype:-no}
   enable_winegsm=${enable_winegsm:-no}
@@ -3925,6 +3926,7 @@ WINE_CONFIG_MAKEFILE(dlls/xmllite/tests)
 WINE_CONFIG_MAKEFILE(dlls/xolehlp)
 WINE_CONFIG_MAKEFILE(dlls/xpsprint)
 WINE_CONFIG_MAKEFILE(dlls/xpssvcs)
+WINE_CONFIG_MAKEFILE(external/winebrotli)
 WINE_CONFIG_MAKEFILE(external/winefaudio)
 WINE_CONFIG_MAKEFILE(external/winefreetype)
 WINE_CONFIG_MAKEFILE(external/winegsm)
