--- a/dlls/dwrite/Makefile.in
+++ b/dlls/dwrite/Makefile.in
@@ -1,6 +1,6 @@
 MODULE    = dwrite.dll
 IMPORTLIB = dwrite
-IMPORTS   = user32 gdi32 advapi32 winefreetype winepng winezlib
+IMPORTS   = user32 gdi32 advapi32 winefreetype winebrotli winepng winezlib
 EXTRAINCL = -I$(EXTSRCDIR)/freetype2/include
 
 EXTRADLLFLAGS = -mno-cygwin
