--- a/dlls/gdi32/Makefile.in
+++ b/dlls/gdi32/Makefile.in
@@ -1,7 +1,7 @@
 EXTRADEFS = -D_GDI32_
 MODULE    = gdi32.dll
 IMPORTLIB = gdi32
-IMPORTS   = advapi32 winefreetype winebrotli winepng winezlib
+IMPORTS   = advapi32 winefreetype winebrotli winebzip2 winepng winezlib
 EXTRAINCL = -I$(EXTSRCDIR)/freetype2/include -I$(EXTSRCDIR)/zlib $(FONTCONFIG_CFLAGS)
 EXTRALIBS = $(CARBON_LIBS) $(APPKIT_LIBS)
 EXTRADEFS = -DHAVE_FT2BUILD_H
